<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.android.abooji"
    android:id="@+id/scrollLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sidemenu_mainbg"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.android.abooji.view.TextViewPlus
            style="@style/menuTitleTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menu_title"
            app:customFont="@string/font_bold" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_homebtn"
            style="@style/menuTextStyle"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_home"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_barcodebtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_barcode"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_logoutbtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_logout"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_edit_profilebtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_edit_profile"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_edit_cardsbtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_edit_cards"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_edit_locationbtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_edit_location"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_edit_shopinglistbtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_edit_shoppinglist"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_edit_categorybtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_edit_category"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_edit_notificationbtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_edit_notificatin"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_changepasswordbtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_change_password"
            app:customFont="@string/font_normal" />

        <com.android.abooji.view.TextViewPlus
            android:id="@+id/menu_helpbtn"
            style="@style/menuTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_help"
            app:customFont="@string/font_normal" />
    </LinearLayout>

</ScrollView>